# anywidget-db-schema-viz

./: .gitignore  README.md  example.ipynb  package.json  pnpm-lock.yaml  pyproject.toml  rolldown.config.js  tsconfig.json
.github/workflows/: pypi-publish.yml
js/: widget.css  widget.ts
notebooks/: example.ipynb  marimo_example.py
src/db_schema_viz/: __init__.py  duckdb.py  types.py
web/: Entity.svelte  Widget.svelte  index.js  index.ts  types.ts  utils.js  utils.ts
