[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "db-schema-viz"
version = "0.0.0"
dependencies = ["anywidget"]
readme = "README.md"
requires-python=">=3.9"

# Dependency groups (recognized by `uv`). For more details, visit:
# https://peps.python.org/pep-0735/
[dependency-groups]
dev = ["watchfiles", "jupyterlab", "marimo"]


[tool.hatch.build]
only-packages = true
artifacts = ["src/db_schema_viz/static/*"]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["src/db_schema_viz/static/index.js"]
skip-if-exists = ["src/db_schema_viz/static/index.js"]
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = "pnpm"
build_cmd = "build"
