[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "db-schema-viz"
version = "0.0.0"
dependencies = [
    "anywidget",
    "pydantic>=2.12.4",
]
readme = "README.md"
requires-python=">=3.9"

[project.optional-dependencies]
duckdb = ["duckdb>=1.0"]

# Dependency groups (recognized by `uv`). For more details, visit:
# https://peps.python.org/pep-0735/
[dependency-groups]
dev = ["watchfiles", "jupyterlab", "marimo", "duckdb"]


[tool.hatch.build]
only-packages = true
artifacts = ["src/db_schema_viz/static/*"]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["src/db_schema_viz/static/index.js"]
skip-if-exists = ["src/db_schema_viz/static/index.js"]
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = "pnpm"
build_cmd = "build"
